wrapper/includeos/result.txt
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/service.cpp:9:10: warning: Glob defined [-W#pragma-messages]
        #pragma message "Glob defined"  
                ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/service.cpp:13:2: error: use of undeclared identifier 'globkad'
        globkad;
        ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/service.cpp:17:2: error: use of undeclared identifier 'aklds'
        aklds;
        ^
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/service.cpp:11:2: warning: expression result unused [-Wunused-value]
        glob;
        ^~~~
/sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/service.cpp:15:2: warning: expression result unused [-Wunused-value]
        globfree;
        ^~~~~~~~
3 warnings and 2 errors generated.
make[2]: *** [CMakeFiles/service.dir/service.cpp.o] Error 1
make[1]: *** [CMakeFiles/service.dir/all] Error 2
make: *** [all] Error 2
[34m* <VMRunner>: [0m Building with cmake ([])
[32m> [90m-- Building for arch x86_64, platform x86_pc[0m
[32m> [90m-- Target triple x86_64-pc-linux-elf[0m
[32m> [90m-- Using vanilla CPU features: SSE3. CAPABS = -msse3 -mfpmath=sse[0m
[32m> [90m-- Building without threading / SMP[0m
[32m> [90m-- Looking for drivers in /sapmnt/HOME/i850193/local/IncludeOS/includeos/x86_64/drivers[0m
[32m> [90m-- 	* Found default_stdout[0m
[32m> [90m-- Configuring done[0m
[32m> [90m-- Generating done[0m
[32m> [90m-- Build files have been written to: /sapmnt/HOME/i850193/workspaces/unikernel/pxsym/wrapper/includeos/build[0m
[34m* <VMRunner>: [0m Building with 'make' (params=[])
Exception while building:  Command '['make', '-j4']' returned non-zero exit status 2

[31;1m[ BUILD_FAIL ] building with cmake failed[0m

